# finance-platform

./: .gitignore  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/admin/: index.html  package.json  project.json  tsconfig.json
apps/admin/src/: App.tsx  main.tsx  styles.css
apps/mobile/: app.json  babel.config.js  package.json  project.json  tsconfig.json
apps/mobile/app/: _layout.tsx  assets.tsx  index.tsx  planning-expense.tsx  planning-income.tsx  planning.tsx  savings.tsx
apps/mobile/app/(tabs)/: _layout.tsx  analysis.tsx  chat.tsx  me.tsx
apps/mobile/src/components/: AppButton.tsx  AppCard.tsx  AppInput.tsx  AppScreen.tsx  AppText.tsx  SectionHeader.tsx  StatCard.tsx  index.ts
apps/mobile/src/config/: api.ts
apps/mobile/src/features/: placeholder-screen.tsx  planning-editor.tsx
apps/mobile/src/theme/: index.ts  tokens.ts
apps/server/: .env.example  finance_agent.db  project.json  pyproject.toml  run.py
apps/server/app/: __init__.py  main.py
apps/server/app/api/: __init__.py  admin.py  chat.py  chat_context.py  finance.py  helpers.py  router.py
apps/server/app/core/: __init__.py  config.py
apps/server/app/services/: __init__.py  (+1 more)
apps/server_fast/: project.json  pyproject.toml
apps/server_fast/app/: db.py  main.py  models.py
apps/server_fast/app/api/: chat.py  finance.py  router.py
apps/server_fast/app/core/: config.py
apps/server_fast/app/services/: __init__.py
docs/: architecture-notes.md  development-guide.md  finance-platform-项目说明.md  flask-learning-notes.md  server-learning-notes.md
