[project]
name = "finance-agent-server"
version = "0.1.0"
description = "FastAPI backend for the finance agent monorepo"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "openai>=1.76.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.7.1"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
